--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
-		"vite": "^3.1.0-beta.1"
+		"vite": "^3.1.0",
+		"devalue": "^3.1.3"
 	},
 	"type": "module"
 }
